fix scrollbar in pet_page_style.css

--- a/pawtechnx/pet_page_style.css
+++ b/pawtechnx/pet_page_style.css
@@ -96,7 +96,8 @@
   gap: 16px;
   border-radius: 8px;
   scroll-behavior: smooth;
-  scrollbar-width: none;
+  scrollbar-width: thin;
+  scrollbar-color: black; 
   width: 90%;
 }
 
@@ -121,15 +122,6 @@
   user-select: none;
 }
 
-.carousel:where(.cat, .pet-image),
-.carousel:where(.hamster, .pet-image),
-.carousel:where(.dog, .pet-image),
-.carousel:where(.rabbit, .pet-image) {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .carousel .cat,
 .carousel .hamster,
 .carousel .dog,
@@ -140,23 +132,23 @@
   background: lightgray;
   cursor: pointer;
   padding-bottom: 15px;
+  display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   border-radius: 8px;
 }
 
-.carousel .cat .pet-image,
-.carousel .hamster .pet-image,
-.carousel .dog .pet-image,
-.carousel .rabbit .pet-image {
+.pet-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 148px;
   width: 148px;
   border-radius: 50%;
 }
 
-.cat .pet-image img,
-.hamster .pet-image img,
-.dog .pet-image img,
-.rabbit .pet-image img {
+.pet-image img {
   width: 140px;
   height: 140px;
   border-radius: 50%;
@@ -171,6 +163,7 @@
   font-weight: 500;
   font-size: 1.56rem;
   margin: 30px 0 5px;
+  text-align: center;
 }
 
 .carousel .cat span,
@@ -179,6 +172,7 @@
 .carousel .rabbit span {
   color: #6a6d78;
   font-size: 1.31rem;
+  text-align: center;
 }
 
 footer {
